--- a/my-app/src/app/common/header/header.component.html
+++ b/my-app/src/app/common/header/header.component.html
@@ -21,8 +21,8 @@
       <li class="nav-item active">
         <a *ngIf="Auth.isLogged()" class="nav-link" routerLink="/logout">Logout </a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Register</a>
+      <li class="nav-item active">
+        <a class="nav-link" routerLink="/register">Register</a>
       </li>
 
     </ul>
