--- a/my-app/src/app/table/table.component.html
+++ b/my-app/src/app/table/table.component.html
@@ -63,12 +63,12 @@
           <label ngDefaultControl  [(ngModel)]="pagination.itemPerPage">Scegli il numero di elementi per pagina da visualizzare:</label>
 
           <select  ngDefaultControl [(ngModel)]="pagination.itemPerPage" >
-            <option *ngFor="let item of pagination.itemPerPageOptions" >{{item}}</option>
+            <option *ngFor="let item of pagination.itemPerPageOptions" >{{item}} {{refreshPages()}}</option>
           </select>
 
           <!-- pager -->
           <ul class="pagination">
-            <li class="page-item">
+            <li class="page-item" *ngIf="pages>1">
               <a class="page-link" (click)="setCurrentPage(1)">First</a>
             </li>
 
@@ -86,13 +86,13 @@
             <li class="page-item" *ngIf="pages>2 && currentPage<pages-1">
             <a class="page-link" (click)="setCurrentPage(currentPage+2)">{{currentPage+2}}</a>
             </li>
-            <li class="page-item" *ngIf="currentPage<pages" >
+            <li class="page-item" *ngIf="pages>1 && currentPage<pages" >
               <a class="page-link" (click)="setCurrentPage(currentPage + 1)">Next</a>
             </li>
             <li class="page-item disabled" *ngIf="currentPage==pages || pages==1">
               <a class="page-link" (click)="setCurrentPage(currentPage + 1)">Next</a>
             </li>
-            <li class="page-item">
+            <li class="page-item" *ngIf="pages>1">
               <a class="page-link" (click)="setCurrentPage(pages)">Last</a>
             </li>
           </ul>
