--- a/my-app/src/app/user/user.component.html
+++ b/my-app/src/app/user/user.component.html
@@ -98,7 +98,7 @@
   </div>
 
 <br>
-<app-reservation [reservationHeaderData]="reservationHeaderData" [isShow]="true" [rowData]="currentReservations"></app-reservation>
+<app-reservation  [isShow]="true"></app-reservation>
 </div>
 
 
