--- a/my-app/src/app/reservation/reservation.component.html
+++ b/my-app/src/app/reservation/reservation.component.html
@@ -1,7 +1,7 @@
 
-<div class="container" *ngIf="isShow">
+<div class="container" *ngIf="isShow&&router!='reservations'" >
   <h3 > Le mie prenotazioni </h3>
-  <app-table [colData]="{'headers':reservationHeaderData}" [id]="'ricerca'" [rowData]="rowData"  [order]="{'defaultColumn':'Id', 'orderType':'desc'}" [pagination]="{'itemPerPage':5, 'itemPerPageOptions':[5,10,20]}" [search]="{columns:['id','dataInizio', 'dataFine', 'plate', 'userName']}"   ></app-table>
+  <app-table [colData]="{'headers':reservationHeaderData}" [id]="'ricerca'" [rowData]="userRowData" [customKeys]="[{key:'vehicle', child:'plate'},{key:'user', child:'userName'}]"  [order]="{'defaultColumn':'Id', 'orderType':'desc'}" [pagination]="{'itemPerPage':5, 'itemPerPageOptions':[5,10,20]}" [search]="{columns:['id','dataInizio', 'dataFine', 'plate', 'userName']}"   ></app-table>
 
 </div>
 
