--- a/my-app/src/app/table/table.component.html
+++ b/my-app/src/app/table/table.component.html
@@ -14,6 +14,8 @@
 
 
 
+
+
       <table mat-table matSort (matSortChange)="onClick($event)" id="table" border="1" class="table table-striped table-bordered table-sm mh-100" matSortActive="{{order.defaultColumn}}" matSortDirection="{{order.orderType}}">
         <thead>
         <tr>
@@ -35,13 +37,19 @@
         </thead>
 
         <tbody>
+
         <tr *ngFor="let record of rowData | search : searchText : column | pagination: pagination.itemPerPage : currentPage :pages">
           <app-button *ngIf="reusableButton!=null" [buttonConfig]="{'customCssClass':'','text':[reusableButton],'icon':'control_point'}" (notify)="setTableAction($event, record)" ></app-button>
 
           <td *ngFor="let col of colData.headers">
 
-            <span>{{record[col.key] | typeselector }}
+            <span>
+              {{getNestedObject(record, col.key)}}
             </span>
+
+
+
+
           </td>
           <td *ngFor="let action of tableAction">
 
