--- a/my-app/src/app/vehicles/vehicles.component.html
+++ b/my-app/src/app/vehicles/vehicles.component.html
@@ -1,5 +1,6 @@
 <h1> Veicoli Disponibili</h1>
 <div *ngIf="vehicles!=undefined || vehicles!=null">
+  <p class="alert-success" *ngIf="msg!=''">{{msg}}</p>
   <app-table *ngIf="reservation!=null " (action)="eventHandler($event)"  [reusableButton]="reserve" [colData]="{'headers':headerData}" [rowData]="rowData" (notify)="sortData($event)" [order]="{'defaultColumn':'Id', 'orderType':'desc'}" [pagination]="{'itemPerPage':5, 'itemPerPageOptions':[2,5,10,20]}" [search]="{columns:['id','brand','immdate', 'model','plate','type']}"></app-table>
   <app-table *ngIf="reservation==null" (action)="eventHandler($event)"  [colData]="{'headers':headerData}" [rowData]="rowData" (notify)="sortData($event)" [order]="{'defaultColumn':'Id', 'orderType':'desc'}" [pagination]="{'itemPerPage':5, 'itemPerPageOptions':[2,5,10,20]}" [search]="{columns:['id','brand','immdate', 'model','plate','type']}"></app-table>
 
