--- a/my-app/src/app/vehicles/vehicles.component.html
+++ b/my-app/src/app/vehicles/vehicles.component.html
@@ -1,15 +1,19 @@
-<h1> Veicoli Disponibili</h1>
-<div *ngIf="vehicles!=undefined || vehicles!=null">
-  <p class="alert-success" *ngIf="msg!=''">{{msg}}</p>
-  <app-table *ngIf="reservation!=null " (action)="eventHandler($event)"  [reusableButton]="reserve" [colData]="{'headers':headerData}" [rowData]="rowData" (notify)="sortData($event)" [order]="{'defaultColumn':'Id', 'orderType':'desc'}" [pagination]="{'itemPerPage':5, 'itemPerPageOptions':[2,5,10,20]}" [search]="{columns:['id','brand','immdate', 'model','plate','type']}"></app-table>
-  <app-table *ngIf="reservation==null" (action)="eventHandler($event)"  [colData]="{'headers':headerData}" [rowData]="rowData" (notify)="sortData($event)" [order]="{'defaultColumn':'Id', 'orderType':'desc'}" [pagination]="{'itemPerPage':5, 'itemPerPageOptions':[2,5,10,20]}" [search]="{columns:['id','brand','immdate', 'model','plate','type']}"></app-table>
+<div *ngIf="rowData!=null">
+  <h1> Veicoli Disponibili</h1>
+  <div *ngIf="vehicles!=undefined || vehicles!=null">
+    <p class="alert-success" *ngIf="msg!=''">{{msg}}</p>
+    <app-table *ngIf="reservation!=null " (action)="eventHandler($event)"  [reusableButton]="reserve" [colData]="{'headers':headerData}" [rowData]="rowData" (notify)="sortData($event)" [order]="{'defaultColumn':'Id', 'orderType':'desc'}" [pagination]="{'itemPerPage':5, 'itemPerPageOptions':[2,5,10,20]}" [search]="{columns:['id','brand','immdate', 'model','plate','type']}"></app-table>
+    <app-table *ngIf="reservation==null" (action)="eventHandler($event)"  [colData]="{'headers':headerData}" [rowData]="rowData" (notify)="sortData($event)" [order]="{'defaultColumn':'Id', 'orderType':'desc'}" [pagination]="{'itemPerPage':5, 'itemPerPageOptions':[2,5,10,20]}" [search]="{columns:['id','brand','immdate', 'model','plate','type']}"></app-table>
 
+  </div>
 </div>
 
+
+
 <br>
 <br>
 
-<div class="container" *ngIf="Auth.getCurrentUser().role=='superuser'">
+<div class="container" *ngIf="role=='superuser'">
   <div class="portlet-body form" *ngIf="isCreation&&!isEditing">
     <h2> Inserisci i dati del veicolo</h2>
     <form>
@@ -17,7 +21,7 @@
       <div class="form-body">
         <div class="form-group">
           <label for="id">Id</label>
-          <input id="id" name="id" path="id" type="text" class="form-control" placeholder="Id" [(ngModel)]="newVehicle.id"/>
+          <input id="id" name="id" path="id" type="text" class="form-control" placeholder="Id" [(ngModel)]="newVehicle.id" disabled/>
 
         </div>
 
