fixed date problem

--- a/my-app/src/app/reservation/reservation.component.html
+++ b/my-app/src/app/reservation/reservation.component.html
@@ -17,13 +17,13 @@
 
   <div class="form-group" >
     <label>Inserisci la data di inizio</label>
-    <input type="date" id="dataInizio" placeholder="dataInizio" [ngModel]="dataInizio " (ngModelChange)="dataInizio = $event"  name="dataInizio" class="form-control" style="text-align: center" >
+    <input type="date" id="dataInizio" placeholder="dataInizio" [(ngModel)]="dataInizio"  name="dataInizio" class="form-control" style="text-align: center" >
 
   </div>
 
   <div class="form-group" >
     <label>Inserisci la data di fine</label>
-    <input type="date" id="dataFine" placeholder="dataFine" [ngModel]="dataFine"  (ngModelChange)="dataFine = $event" name="dataFine" class="form-control" style="text-align: center">
+    <input type="date" id="dataFine" placeholder="dataFine" [(ngModel)]="dataFine"  name="dataFine" class="form-control" style="text-align: center">
 
   </div>
   <div>
